--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Fyind Live Chat</title>
 
   <style>
-   
+ body { background :blue}
     .o_thread_window,
     .o_in_home_menu {
       width: 98%;
