--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ document.addEventListener('DOMContentLoaded', function() {
         let threadWindow = document.querySelector('.o_thread_window.o_in_home_menu');
         if(threadWindow) {
          
-          threadWindow.style.width = '98%';
+          threadWindow.style.width = '20%';
 		   threadWindow.style.height = '98%';
-
+threadWindow.style.right ='';
 
          
           observer.disconnect(); 
