--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ document.addEventListener('DOMContentLoaded', function() {
         let threadWindow = document.querySelector('.o_thread_window.o_in_home_menu');
         if(threadWindow) {
          
-          threadWindow.style.width = '20%';
+        //  threadWindow.style.width = '20%';
 		   threadWindow.style.height = '98%';
 threadWindow.style.right ='';
 
