--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ document.addEventListener('DOMContentLoaded', function() {
            threadWindow.style.width = '25%';
 		 // threadWindow.style.height = '98%';
 		 threadWindow.style.position ='fixed';
- 
+ threadWindow.style.right ='';
 //threadWindow.style.pointerEvents = 'auto';
          
           observer.disconnect(); 
